--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx get"
+    "start": "tsx get",
+    "postinstall": " > addresses.txt"
   },
   "keywords": [],
   "author": "",
